Tue Jul 30 11:00:52 2013  Zachary Scott  <e@zzak.io>

	* ext/curses/extconf.rb: [DOC] nodoc to reduce Object pollution

Tue Jul 30 08:19:42 2013  Tanaka Akira  <akr@fsij.org>

	* sizes.c (Init_sizes): Define sizes only if the type actually exists.

Mon Jul 29 22:55:26 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sizes.c (Init_sizes): define RbConfig::SIZEOF.  [Feature #8568]

Mon Jul 29 22:25:20 2013  Zachary Scott  <e@zzak.io>

	* ext/curses/curses.c: [DOC] Update location of samples
	* samples/curses/*: Move Curses samples and refactor from mixin
	  The samples are included in rdoc for module and use of mixin is
	  confusing

Mon Jul 29 22:16:11 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (LOG2_KARATSUBA_BIG2STR_DIGITS): Renamed from
	  LOG2_KARATSUBA_DIGITS.
	  (KARATSUBA_BIG2STR_DIGITS): Renamed from KARATSUBA_DIGITS.

Mon Jul 29 22:04:45 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_compare_by_id): add function prototype.

Mon Jul 29 21:53:41 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_compare_by_id): don't call rb_hash_rehash()
	  if self.compare_by_identity? == true.

Mon Jul 29 21:29:48 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_assoc): performance improvement by replacing
	  compare function in RHASH(hash)->ntbl->type temporarily like r42224.
	  it falls back to rb_hash_foreach() if st_lookup() doesn't find the key.

	* test/ruby/test_hash.rb: add a test for above.

Mon Jul 29 21:15:30 2013  Akinori MUSHA  <knu@iDaemons.org>

	* test/ruby/test_lazy_enumerator.rb
	  (TestLazyEnumerator#test_initialize): Make sure
	  Enumerator::Lazy#initialize raises error if the object is
	  frozen.  The check was performed by rb_ivar_set() before
	  rb_check_frozen() was added to enumerator_init().

Mon Jul 29 21:06:42 2013  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_init): Add a frozenness check to
	  prevent a frozen Enumerator object from being reinitialized with